fix nav on mobile

--- a/client/css/header.css
+++ b/client/css/header.css
@@ -8,6 +8,7 @@
     position: sticky;
     top: 0;
     z-index: 2;
+    margin-bottom: 20px;
 }
 #header section {
     display: inline-block;
