--- a/client/css/movies.css
+++ b/client/css/movies.css
@@ -1,6 +1,6 @@
 .visuals__title {
     text-align: center;
-    margin: 40px 0;
+    margin: 0 0 40px;
 }
 .visual__list {
     display: flex;
